--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -12,15 +12,8 @@
   align-items: center;
 }
 
-.logo {
-  font-size: 28px;
-  font-weight: bold;
-  color: #000;
+.logoWrapper {
   margin-right: 50px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  border-radius: 16px;
-  background-color: #fff;
 }
 
 .menu {
@@ -65,6 +58,18 @@
 
 .menuIcon {
   display: none;
+}
+
+.welcomeWrapper {
+  display: flex;
+  align-items: center;
+}
+
+.welcome {
+  font-size: 18px;
+  color: white;
+  line-height: 0px;
+  margin-right: 32px;
 }
 
 @media (max-width: 768px) {
@@ -170,5 +175,13 @@
   .menuItem {
     margin: 40px 0;
     text-align: center;
+  }
+
+  .welcomeWrapper {
+    display: none;
+  }
+
+  .logoWrapper {
+    margin-right: 50%;
   }
 }
