feat: added mailing service to contacts screen

--- a/pages/contacts/contacts.module.css
+++ b/pages/contacts/contacts.module.css
@@ -17,6 +17,14 @@
   text-align: center;
 }
 
+.notification {
+  color: green;
+  font-size: 20px;
+  margin-top: 16px;
+  width: 100%;
+  text-align: center;
+}
+
 .form {
   display: flex;
   flex-direction: column;
