feat: created a new page to show prompts history to the user

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -72,6 +72,25 @@
   margin-right: 32px;
 }
 
+.profileIcon {
+  margin-right: 8px;
+  cursor: pointer;
+}
+
+.profileMenu {
+  position: absolute;
+  top: 80px;
+  right: 16px;
+  background-color: white;
+  border-radius: 16px;
+  padding: 16px 16px;
+}
+
+.profileMenuOption {
+  margin-top: 10px;
+  cursor: pointer;
+}
+
 @media (max-width: 768px) {
   .header {
     flex-direction: column;
