--- a/pages/prompts/prompts.module.css
+++ b/pages/prompts/prompts.module.css
@@ -20,14 +20,20 @@
   background-color: #fff;
   padding: 1rem;
   border-radius: 10px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: inset -6px -6px 5px rgba(0, 0, 255, 0.3),
+    inset 6px 6px 5px #f6f6f6;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
-.li::before {
-  color: #4caf50;
-  font-size: 1.5rem;
-  margin-right: 1rem;
-  display: inline-block;
+.li.selected {
+  box-shadow: rgb(124, 194, 255) 3px 3px 6px 0px inset,
+    rgba(0, 0, 255, 0.3) -3px -3px 6px 1px inset;
+}
+
+.arrowIcon {
+  margin-right: 8px;
 }
 
 .emptyWrapper {
@@ -73,6 +79,17 @@
 
 .goHomeButton:hover {
   background-color: #303f9f;
+}
+
+.promptWrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.outputText {
+  color: white;
+  font-size: 14px;
+  white-space: pre-wrap;
 }
 
 @media (max-width: 768px) {
